2010-05-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/CMakeLists.txt: Make library compile again
	when using BUILD_WITH_LDAP.

2010-05-27  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Made StartTLS requirement configurable, solving 2 todos. The
	configuration entry is not found in the exemplary .auth.conf as it
	is highly advised not to use it other for testing purposes.

	* misc/ldap_auth.h (ldap_auth_info): Added field whether StartTLS is
	mandatory, adjusted proto.
	
	* misc/ldap_auth.c (ldap_auth_info_new): Added parameter whehter
	StartTLS is required.
	(ldap_authenticate): Respect new configuration entry.
	(ldap_auth_info_from_key_file): Read in new configuration entry.

	* misc/ads_auth.c (ads_authenticate): Use parameter to decide wheter
	StartTLS initialization success is mandatory.


2010-05-27  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (openvas_write_config_file): When one of two
	methods is configured, do not create default entries for the other.
	Updated doc.

2010-05-27  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Last part of commits for basic support for authentication against an
	ADS. Authenticator implementation in openvas_auth module.

	* misc/openvas_auth.c: Include ads_auth header.
	(authentication_method): Add ADS Method enum.
	(authentication_methods): Add ADS Mehtod string, made warning more
	prominent and marked semantically.
	(add_authenticator): Init and add an ADS authenticator.
	(openvas_auth_write_config): Add exemplary ADS authentication config.

2010-05-27  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/ldap_auth.c (ldap_auth_info_free): Handle case where parameter
	is NULL, updated doc.
	(ldap_auth_info_create_dn): Renamed to ldap_auth_info_auth_dn.
	(ldap_auth_info_auth_dn): Renamed from ldap_auth_info_create_dn.
	(ldap_authenticate): Updated call.

2010-05-27  Felix Wolfsteller <felix.wolfsteller@greenbone.net>
